--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <section class="home" id="home">
         <div class="max-width">
             <div class="home-content">
-                <div class="text-1">नमस्ते, THIS IS</div>
+                <div class="text-1">Hello, THIS IS</div>
                 <div class="text-2">CHANDNI GUPTA </div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
                 <a href="#">Hire me</a>
