--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="PHOTO.jpeg" alt="">
+                    <img src="https://media.licdn.com/dms/image/D5603AQGrVfpxjD-SKA/profile-displayphoto-shrink_800_800/0/1673241156790?e=1682553600&v=beta&t=3gEJ0Yd8GzfqUbYQglzTtne72yaFgrxtnJApxrtmw4o" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">I'm Chandni Gupta and I'm a <span class="typing-2"></span></div>
                     <p>I am a second year student at Galgotia's college of engineering & technology and an enthusiast in Data Structures & Algorithms and Web development. During my internship at Oasis infobyte foundation, I explored myself in the field of web development & design
                        and gained confidence.
                         </p>
-                    <a href="#">My Resume</a>
+                    <a href="">My Resume</a>
                 </div>
             </div>
         </div>
