--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <p>I am a second year student at Galgotia's college of engineering & technology and an enthusiast in Data Structures & Algorithms and Web development. During my internship at Oasis infobyte foundation, I explored myself in the field of web development & design
                        and gained confidence.
                         </p>
-                    <a href="">My Resume</a>
+                    <a href="Resume-Chandni-Gupta (1).pdf">My Resume</a>
                 </div>
             </div>
         </div>
